fix: abilities not showing full on mobile device

--- a/src/components/Abilities/Abilities.module.css
+++ b/src/components/Abilities/Abilities.module.css
@@ -1,7 +1,11 @@
 .abilityContainer {
-  padding: 0 2em;
-  transition: max-height 0.25s ease-in-out, opacity 0.5s ease-in-out;
+  padding: 0 5em;
+  transition: max-height 0.2s ease-in-out, opacity 0.4s ease-in-out;
   overflow: hidden;
+
+  @media screen and (max-width: 600px) {
+    padding: 0 2em;
+  }
 }
 
 .abilityTitleContainer {
@@ -28,10 +32,6 @@
 
 .visibleAbilityContainer {
   opacity: 1;
-  max-height: 5em;
+  max-height: 10em;
   margin-top: 1em;
-
-  @media screen and (max-width: 600px) {
-    max-height: 10em;
-  }
 }
